2025-01-29 Roy Hills <royhills@hotmail.com>

	* get-oui: Change HTTP user agent string to mimic Chrome on Windows
	  10/x64 because the IEEE site rejects requests with the default
	  libwww-perl user agent. Thanks to sonikbhoom for pointing this out.
	  https://github.com/royhills/arp-scan/pull/195

	* ieee-oui.txt: Updated from IEEE registry. Total of 53441 MAC/Vendor
	  mappings (4575 IAB + 5683 MAM + 36857 OUI + 6326 OUI36).

2024-08-26 Roy Hills <royhills@hotmail.com>

	* configure.ac: Unconditionally add -Wextra to GCC and Clang compiler
	  options instead of using the GCC_WEXTRA macro. -Wextra was added in
	  GCC 3.4.0, which is 20 years old now, and has always been supported
	  by Clang. There are no supported systems with earlier GCC versions.
	  https://github.com/royhills/arp-scan/pull/190

	* configure.ac: Unconditionally add -Wformat-security to GCC/Clang
	  compiler options instead of using the GCC_FORMAT_SECURITY macro.
	  https://github.com/royhills/arp-scan/pull/191

	* m4/gcc-wextra.m4: Removed.

	* m4/gcc-format-security.m4: Removed.

2024-08-14 Roy Hills <royhills@hotmail.com>

	* get-iab: removed. This script is no longer needed and was depreciated
	  in arp-scan 1.10.
	  https://github.com/royhills/arp-scan/pull/184

	* ieee-oui.txt: Updated from IEEE registry. Total of 52119 MAC/Vendor
	  mappings (4575 IAB + 5461 MAM + 35971 OUI + 6112 OUI36).
	  https://github.com/royhills/arp-scan/pull/185

	* configure.ac, m4/*: Move local autoconf macros from acinclude.m4
	  to seperate files under m4/, which is specified with
	  AC_CONFIG_MACRO_DIRS in configure.ac. configure.ac now requires
	  at least autoconf 2.70 (was previously 2.69).

2024-03-29 Roy Hills <royhills@hotmail.com>

	* arp-fingerprint: Added recent Windows and FreeBSD patterns.

2024-01-10 Roy Hills <royhills@hotmail.com>

	* arp-scan.c: Use printf() instead of warn_msg() for the "Target list
	  from interface" message so the output is sent to stdout instead of
	  stderr.
