@@ -1,5 +1,5 @@
 #!/bin/sh
-# arp-scan is Copyright (C) 2005-2024 Roy Hills
+# arp-scan is Copyright (C) 2005-2025 Roy Hills
 #
 # This file is part of arp-scan.
 #
