@@ -1,6 +1,6 @@
 #!/usr/bin/env perl
 #
-# Copyright 2006-2024 Roy Hills
+# Copyright 2006-2025 Roy Hills
 #
 # This file is part of arp-scan.
 #
